fix: drag placeholder visibility
Only show placeholder after it was moved and snapped around a node. Otherwise, placeholder is visible for a short time in the top-left corner of the document.

--- a/src/styles/app/_editor.scss
+++ b/src/styles/app/_editor.scss
@@ -35,6 +35,7 @@
   }
 
   #fig-drag-placeholder {
+    visibility: hidden;
     position: relative;
     pointer-events: none;
     max-width: 360px;
@@ -42,15 +43,18 @@
     background-color: $primary;
 
     &[data-direction="before"] {
+      visibility: visible;
       top: 0px;
       margin-top: -2px;
     }
 
     &[data-direction="after"] {
+      visibility: visible;
       margin-top: -2px;
     }
 
     &[data-direction="insert"] {
+      visibility: visible;
       height: 38px;
       margin-top: -38px;
       box-sizing: border-box;
